syntax = "proto3";

message TagLength {
    message Type {
        string fixed = 1;
        string minimum = 2;
        string maximum = 3;
        string minimum_and_maximum = 4;
    }
}

message __Main {
    repeated TagLength.Type value = 1;
}